
[TestTestCommandInteractivePTYOutput - 1]
cmd.test.header, Arg 1: {Count: 0, Data: &map[version:1.21.1]}

cmd.test.section.compatible
✅ Alpha (alpha) [modrinth]

cmd.test.section.inconclusive
❔ Beta (beta) [curseforge] reason

‼️ cmd.test.summary.inconclusive, Arg 1: {Count: 0, Data: &map[version:1.21.1]}

cmd.test.summary.inconclusive_hint, Arg 1: {Count: 0, Data: &map[version:1.21.1]}
---

[TestTestCommandInteractivePTYRunningShowsHeadersWhenShort - 1]
cmd.test.header, Arg 1: {Count: 0, Data: &map[version:1.21.11]}

cmd.test.section.compatible
✅ Alpha (alpha) [modrinth]
⣾  Gamma (gamma) [modrinth]

cmd.test.section.not_compatible
❌ Beta (beta) [modrinth]
---

[TestTestCommandInteractivePTYRunningScrollsToNotCompatible - 1]
✅ Gamma (gamma) [modrinth]
✅ Delta (delta) [modrinth]
✅ Epsilon (epsilon) [modrinth]

cmd.test.section.not_compatible
❌ Zeta (zeta) [modrinth]
---

[TestTestCommandInteractivePTYRunningMouseScrollsToNotCompatible - 1]
cmd.test.header, Arg 1: {Count: 0, Data: &map[version:1.21.1

cmd.test.section.compatible
✅ Alpha (alpha) [modrinth]
✅ Beta (beta) [modrinth]
✅ Gamma (gamma) [modrinth]
✅ Delta (delta) [modrinth]
✅ Epsilon (epsilon) [modrinth]

cmd.test.section.not_compatible
❌ Zeta (zeta) [modrinth]
---

[TestTestCommandInteractivePTYFinalTranscriptIncludesSummaryAfterScroll - 1]
✅ Epsilon (epsilon) [modrinth]

cmd.test.section.not_compatible
❌ Zeta (zeta) [modrinth]

‼️ cmd.test.summary.unsupported, Arg 1: {Count: 0, Data: &map[version:1.21.11]}
---

[TestTestCommandInteractivePTYFinalTranscriptIncludesSummaryWithoutScroll - 1]
✅ Epsilon (epsilon) [modrinth]

cmd.test.section.not_compatible
❌ Zeta (zeta) [modrinth]

‼️ cmd.test.summary.unsupported, Arg 1: {Count: 0, Data: &map[version:1.21.11]}
---

[TestTestCommandInteractivePTYRunningSnapshotMediumHeight - 1]
cmd.test.header, Arg 1: {Count: 0, Data: &map[version:1.21.11]}

cmd.test.section.compatibility
✅ Alpha (alpha) [modrinth]
⣾  Beta (beta) [modrinth]
⣾  Gamma (gamma) [modrinth]
---

[TestTestCommandInteractivePTYRunningSnapshotTallHeightFailure - 1]
cmd.test.header, Arg 1: {Count: 0, Data: &map[version:1.21.11]}

cmd.test.section.compatible
✅ Alpha (alpha) [modrinth]
⣾  Gamma (gamma) [modrinth]
⣾  Delta (delta) [modrinth]

cmd.test.section.not_compatible
❌ Beta (beta) [modrinth]
---

[TestTestCommandInteractivePTYFinalTranscriptSuccessShortHeight - 1]
cmd.test.section.compatible
✅ Alpha (alpha) [modrinth]
✅ Beta (beta) [modrinth]
✅ Gamma (gamma) [modrinth]

✅ cmd.test.success, Arg 1: {Count: 0, Data: &map[version:1.21.11]}
---

[TestTestCommandInteractivePTYFinalTranscriptInconclusiveMediumHeight - 1]
cmd.test.header, Arg 1: {Count: 0, Data: &map[version:1.21.11]}

cmd.test.section.compatible
✅ Alpha (alpha) [modrinth]
✅ Gamma (gamma) [modrinth]

cmd.test.section.inconclusive
❔ Beta (beta) [modrinth] timed out

‼️ cmd.test.summary.inconclusive, Arg 1: {Count: 0, Data: &map[version:1.21.11]}

cmd.test.summary.inconclusive_hint, Arg 1: {Count: 0, Data: &map[version:1.21.11]}
---
